fix date input not showing calender icon

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -60,4 +60,24 @@
   .animation-delay-400 {
     animation-delay: 0.4s;
   }
+
+  input[type="date"]::-webkit-calendar-picker-indicator {
+    filter: invert(1);
+    color: #525252;
+    opacity: 0.5;
+    display: block;
+    width: 20px;
+    height: 20px;
+    transition-property: opacity;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 50ms;
+  }
+  input[type="date"]:focus-within::-webkit-calendar-picker-indicator {
+    filter: invert(1);
+    color: #525252;
+    opacity: 0.9;
+    display: block;
+    width: 20px;
+    height: 20px;
+  }
 }
